[package]
name = "polars-project"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = { version = "0.43.1", features = [
  "lazy",
  "describe",
  "dtype-datetime",
  "strings",
  "regex",
  "temporal",
  "dtype-categorical",
  "concat_str",
  "list_eval",
  "random",
  "rank",
  "round_series",
] }
chrono = "0.4.38"
rand = "0.8.5"
reqwest = { version = "0.12.8", features = ["blocking"] }
